Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11858

json_merge() concatenates instead of merging

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.2(EOL)
    • 10.2.4
    • JSON

    Description

      I am not sure where to refer what "json merge" means formally, but looking in several places makes me think that current 10.2 behavior is incorrect :

      MariaDB [test]> select json_merge('{"a":"b"}', '{"a":"c"}') ;
      | {"a":"b", "a":"c"}                   |
      

      While both http://tools.knowledgewalls.com/onlinejsonmerger and MySQL 5.7 show:

      mysql > select json_merge('{"a":"b"}', '{"a":"c"}') ;
      | {"a": ["b", "c"]}                    |
      

      Attachments

        Activity

          People

            holyfoot Alexey Botchkov
            anikitin Andrii Nikitin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1d
                1d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.