MDEV-11858 json_merge() concatenates instead of merging.

Fix json_merge implementation.